# agl-game-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dependency.cmake  Doxyfile  PROJECTILE_SYSTEM_SUMMARY.md  README.md  SHADOW_DEMO.md  WORKFLOW_UPDATES.md  build.sh  build_engine.sh  example_logger.cpp  format.sh  generate_docs.sh  run_sandbox_demo.sh  run_shadow_demo.sh  run_simple_gizmos_demo.sh  setup-dev.sh  setup-github.sh  shadow_demo.cpp  test_demos.sh  test_simple_demo.cpp
.github/workflows/: update-dependency.yml  workflow copy.yml  workflow-code-analyze.yml  workflow.yml
assets/models/asteroid/: asteroid.mtl
assets/models/ship_player/: spaceship.mtl
assets/models/spaceship2/: spaceship.mtl
docs/: CAMERA_DOCUMENTATION.md  README.md  deltatime-improvements.md
gamelib/: CMakeLists.txt  agl-gamelib-config.cmake.in  agl-gamelib.pc.in  build_standalone.sh
gamelib/include/: Camera.h  CameraController.h  DispatchQueue.h  Gizmos.h  Logger.h  ProjectileSystem.h  Renderer.h  Shader.h  ShadowSystem.h  SigSlot.h  Texture.h  VertexArray.h  VertexBufferLayout.h  agl.h  agt.h  buffer.h  game.h  input.h  mesh.h  window.h
gamelib/src/: Camera.cpp  CameraController.cpp  DispatchQueue.cpp  Gizmos.cpp  Logger.cpp  ProjectileSystem.cpp  Renderer.cpp  Shader.cpp  ShadowSystem.cpp  Texture.cpp  VertexArray.cpp  VertexBufferLayout.cpp  buffer.cpp  game.cpp  input.cpp  main.cpp  mesh.cpp  window.cpp
include/: Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBufferLayout.h  agl.h  agt.h  buffer.h  game.h  input.h  window.h
sandbox/: CMakeLists.txt  build_demo.sh  run_demo.sh
sandbox/src/: advanced_renderer_demo.cpp  benchmark_deltatime_demo.cpp  dispatchqueue_demo.cpp  example_logger_demo.cpp  gizmos_demo.cpp  gizmos_simple_demo.cpp  mesh_demo.cpp  projectile_demo.cpp  renderer_demo.cpp  shadow_demo.cpp  shooter_camera_demo.cpp  signalslot_demo.cpp  texture_demo.cpp
src/: Logger.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBufferLayout.cpp  buffer.cpp  game.cpp  input.cpp  main.cpp  renderer_demo.cpp  texture_demo.cpp  window.cpp
